[package]
name = "coldiff"
version = "0.1.0"
edition = "2021"
description = "Highlights column differences on the lines read from the standard input"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"colored" = "2.0"
